--- a/FE/src/components/header/header.css
+++ b/FE/src/components/header/header.css
@@ -1,3 +1,7 @@
 .header {
-    background-color: red;
+    border: solid blue 2px;
+    height: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
