--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -1,10 +1,23 @@
-body {
-    margin: 0;
+html, body {
+    margin: 0; 
+    background-color: #212122;
+    height: 100vh;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;
+}
+
+::-webkit-scrollbar {
+    width: 0.3em;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #656568;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #78787c;
 }
 
 #root {
-    width: 100vw;
-    min-height: 100vh;
-    height: 100%;
-    background-color: antiquewhite;
+    height: 100%;   
 }
